pod-claim-default.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: pod-default 
spec: 
  containers: 
    - name: myfrontend
      image: nginx
      volumeMounts:
      - mountPath: "/ver/www/html"
        name: mypd
  volumes:
    - name: mypd
      persistentVolumeClaim:
        claimName: pvc-default
